Level 6 - Authentication using passport's local strategy

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,13 @@ body {
 
 .secret-text {
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.8rem;
+  color: #fff;
+  background-color: #000;
+}
+
+.redirection-text {
+  font-size: 1.3rem;
   color: #fff;
   background-color: #000;
 }
