--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,44 +1,49 @@
 <%- include('partials/header') %>
 
-<div class="container mt-5">
-  <h1>Login</h1>
+  <div class="container mt-5">
+    <h1>Login</h1>
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="card">
+          <div class="card-body">
 
-  <div class="row">
-    <div class="col-sm-8">
-      <div class="card">
-        <div class="card-body">
+            <!-- Makes POST request to /login route -->
+            <form action="/login" method="POST">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" name="username" required autocomplete="off" autofocus>
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password" required autocomplete="off">
+              </div>
+              <div class=" d-flex justify-content-center">
+                <button type="submit" class="btn btn-dark btn-lg w-100" id="login">Login</button>
+              </div>
+            </form>
 
-          <!-- Makes POST request to /login route -->
-          <form action="/login" method="POST">
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" name="username" required autocomplete="off">
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" required autocomplete="off">
-            </div>
-            <div class=" d-flex justify-content-center">
-              <button type="submit" class="btn btn-dark btn-lg w-100">Login</button>
-            </div>
-          </form>
-
+          </div>
         </div>
       </div>
+
+      <!-- <div class="col-sm-4">
+        <div class="card">
+          <div class="card-body">
+            <a class="btn btn-block" href="/auth/google" role="button">
+              <i class="fab fa-google"></i>
+              Sign In with Google
+            </a>
+          </div>
+        </div>
+      </div> -->
+
     </div>
-
-    <!-- <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
-            Sign In with Google
-          </a>
-        </div>
-      </div>
-    </div> -->
-
   </div>
-</div>
+
+  <!-- <script>
+    document.getElementById("login").addEventListener("click", function() {
+      document.documentElement.requestFullscreen();
+    })
+  </script> -->
 
 <%- include('partials/footer') %>
