--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,15 +21,45 @@ body {
 }
 
 .register,
-.login {
+.login,
+.submit {
   width: 30%;
+}
+
+.submit__input-text{
+  font-weight: bold;
+}
+
+.submit__input-text::placeholder{
+  font-style: normal;
+  font-weight: lighter;
+  font-size: 1.1rem;
+}
+
+.google {
+  padding: 1rem 4rem;
+  color: #343a40;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, .125);
+  border-radius: .25rem;
+}
+
+.google:hover {
+  background-color: red;
+  color: #fff;
+  text-decoration: none;
 }
 
 @media (max-width: 600px) {
 
   .register,
-  .login {
+  .login,
+  .submit {
     width: 80%;
     margin-bottom: 10px;
+  }
+
+  .social-block {
+    margin-top: 1rem;
   }
 }
