--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,16 +26,12 @@
         </div>
       </div>
 
-      <!-- <div class="col-sm-4">
-        <div class="card">
-          <div class="card-body">
-            <a class="btn btn-block" href="/auth/google" role="button">
+      <div class="col-sm-4 social-block d-flex justify-content-center align-items-start mx-lg-auto">
+            <a class="google" href="/auth/google" role="button">
               <i class="fab fa-google"></i>
               Sign In with Google
             </a>
-          </div>
-        </div>
-      </div> -->
+      </div>
 
     </div>
   </div>
