--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -1,21 +1,22 @@
 <%- include('partials/header') %>
 
+<div class="jumbotron text-center">
   <div class="container">
-    <div class="jumbotron centered">
-      <i class="fas fa-key fa-6x"></i>
-      <h1 class="display-3">Secrets</h1>
-      <p class="secret-text">Don't keep your secrets, share them anonymously!</p>
+    <i class="fas fa-key fa-5x mb-2"></i>
+    <h1 class="font-weight-light display-4">Secrets</h1>
+    <p class="secret-text p-1">Don't keep your secrets, share them anonymously!</p>
 
-      <form action="/submit" method="POST">
+    <form action="/submit" method="POST">
 
-        <div class="form-group">
-          <input type="text" class="form-control text-center" name="secret" placeholder="What's your secret?">
-        </div>
-        <button type="submit" class="btn btn-dark">Submit</button>
-      </form>
+      <div class="form-group">
+        <input type="text" class="form-control text-center p-4 submit__input-text" name="secret"
+          placeholder="What's your secret?" autofocus required autocomplete="off">
+      </div>
+      <button type="submit" class="btn btn-dark btn-lg submit">Submit</button>
+    </form>
 
 
-    </div>
   </div>
-  
+</div>
+
 <%- include('partials/footer') %>
