updated authentication full

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
       <p class="lead">Don't keep your secrets, share them anonymously!</p>
       <hr>
       <div class="buttonBox d-flex flex-wrap align-items-center justify-content-center mx-auto p-4">
-        <a class="btn btn-light btn-lg register mr-2" href="/register" role="button">Register</a>
+        <a class="btn btn-light btn-lg register" href="/register" role="button">Register</a>
         <a class="btn btn-dark btn-lg login" href="/login" role="button">Login</a>
       </div>
     </div>
