--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,11 +26,15 @@ body {
   width: 30%;
 }
 
-.submit__input-text{
+.register {
+  margin-right: .5rem;
+}
+
+.submit__input-text {
   font-weight: bold;
 }
 
-.submit__input-text::placeholder{
+.submit__input-text::placeholder {
   font-style: normal;
   font-weight: lighter;
   font-size: 1.1rem;
@@ -50,16 +54,41 @@ body {
   text-decoration: none;
 }
 
-@media (max-width: 600px) {
+.secret-heading {
+  font-size: 4rem;
+  font-weight: 300;
+  margin-bottom: 1.5rem;
+}
+
+.submit-key {
+  margin-bottom: .5rem;
+}
+
+@media (max-width: 700px) {
+
+  .centered {
+    padding-top: 100px;
+  }
 
   .register,
   .login,
   .submit {
     width: 80%;
     margin-bottom: 10px;
+    margin-right: 0;
   }
 
   .social-block {
     margin-top: 1rem;
+  }
+
+  .secret-heading {
+    font-weight: 100;
+    font-size: 2.3rem;
+  }
+
+  .submit-key {
+    font-size: 5em;
+    margin-bottom: 1.5rem;
   }
 }
