--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
   <div class="container mt-5">
     <h1>Register</h1>
     <div class="row">
-      <div class="col-sm-8">
+      <div class="col-md-8">
         <div class="card">
           <div class="card-body">
 
@@ -25,7 +25,7 @@
         </div>
       </div>
 
-      <div class="col-sm-4 social-block d-flex justify-content-center align-items-start mx-lg-auto">
+      <div class="col-md-4 social-block d-flex justify-content-center align-items-start mx-lg-auto">
         <a class="google" href="/auth/google" role="button">
           <i class="fab fa-google"></i>
           Sign Up with Google
