--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -2,11 +2,13 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <i class="fas fa-key fa-5x mb-4"></i>
-    <h1 class="font-weight-light">You've Discovered My Secret!</h1>
-    
-    <% secrets.forEach(function(secret) { %>
-    <p class="secret-text p-1"><%= secret %></p>
+    <i class="fas fa-key submit-key fa-6x"></i>
+    <h1 class="secret-heading">You've Discovered My Secret!</h1>
+
+    <% usersWithSecrets.forEach(function(user) { %>
+    <%  user.secrets.forEach(function(secret) { %>
+        <p class="secret-text p-1"><%= secret %></p>
+    <%  }); %>
     <% }); %>
 
     <hr>
